# MCS_OTEL

./: .env.example  .gitignore  README.md  analyze_transcripts.py  config_loader.py  converter.py  improve.py  improvement_plan.md  inspect_universal_search.py  log.py  main.py  models.py  otel_registry.py  parsers.py  pyproject.toml  rxconfig.py  utils.py
config/: default_mapping.json  otel_attributes.json
docs/: GEMINI Potential improvement options.md  gap-analysis.md  how-it-works.md  model GPT five three codecs Potential improvement options.md  transcript_analysis.md
tests/: test_analyze_transcripts.py  test_config_loader.py  test_converter.py  test_enrichment.py  test_improve.py  test_models.py  test_parsers.py
tests/fixtures/: pva_studio_transcript.json  rex_teams_transcript.json  sample_dataverse.csv  zava_bot_content.yml  zava_expense_transcript.json
web/: web.py
web/components/: __init__.py  connection_view.py  conversation_view.py  entity_browser.py  evaluate.py  evaluate_upload.py  event_registry.py  export.py  improve_dashboard.py  load_mapping.py  mapping_editor.py  navbar.py  react_flow.py  rule_hierarchy.py  save_mapping.py  session_dashboard.py  sidebar.py  span_tree.py  timeline.py  upload.py
web/state/: __init__.py  _improve.py  _library.py  _mapping.py  _navigation.py  _preview.py  _upload.py
