[project]
name = "mcs-otel"
version = "0.1.0"
description = "MCS Copilot Studio Telemetry to OpenTelemetry Mapper"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "reflex>=0.7.0",
    "pydantic>=2.0",
    "loguru>=0.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
